--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(0,43 ,43 );
+    background-color: rgb(0,43,43);
     color: linen;
     font-size: 150%;
     line-height: 1.4;
@@ -48,7 +48,6 @@ img{
     width:70%;
     color: white;
     font-size: 110%;
-    background:gray;
     padding: 4px;
     border:1px solid white;
 }
