--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ img{
 
 .textbox {
     width:70%;
-    color: white;
+    color: none;
     font-size: 110%;
     padding: 4px;
     border:1px solid white;
