--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ img{
 
 .redacted{
     background-color: rgb(215, 206, 199);
-    color:  rgb(215, 206, 199);
+    color:  rgb(2,6,0);
 }
 
 .half{
